[gd_scene load_steps=4 format=3 uid="uid://pic4bclutwcm"]

[ext_resource type="Theme" uid="uid://llwmjcvp3pxj" path="res://styles/tros_theme.tres" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://8rrl28bs8y5l" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="FontFile" uid="uid://cvi87wv605uvt" path="res://assets/fonts/bulletinV1.ttf" id="3_lnu2h"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_yqjtg")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="DialogueMargin" type="MarginContainer" parent="MarginContainer2/HBoxContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 50

[node name="DialogueVbox" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/DialogueMargin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="SubjectHbox" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SubjectLabel" type="Label" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox/SubjectHbox"]
layout_mode = 2
theme = ExtResource("1_uwrxv")
text = "//SUBJECT:
//ORIGIN:
//CRIME:"

[node name="SubjectDetails" type="Label" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox/SubjectHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uwrxv")
text = "[NAME]
[ORIGIN]
[CRIME]"
clip_text = true

[node name="WarningLabel" type="Label" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox"]
layout_mode = 2
theme = ExtResource("1_uwrxv")
text = "::SUSPECTED KUNSTGEIST                       
::PROCEED WITH PREJUDICE::"

[node name="DialogueHistoryScrollbox" type="ScrollContainer" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_uwrxv")

[node name="DialogueHistoryVbox" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox/DialogueHistoryScrollbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogueHistoryLabel" type="Label" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox/DialogueHistoryScrollbox/DialogueHistoryVbox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 12
autowrap_mode = 3

[node name="DialogueOptionsVbox" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/DialogueMargin/DialogueVbox"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_right = 50

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_uwrxv")
theme_override_fonts/font = ExtResource("3_lnu2h")
theme_override_font_sizes/font_size = 8
text = "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::::%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::::::+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::::::::-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@::::::::::::::::@:::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::@@:::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+:::::::::::::::::@@@::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::@@@#::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::+@@@@:::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::@@@@@::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::@@@@@@::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::@@@@@@@:::::::::::::::::::::#@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::::@@@@@@@@:::::::::::::::::::::+@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::::%@@@@@@@@::::::::::::::::::::::-@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::@@@@@@@@@-:::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::::::@@@@@@@@@@::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::::::@@@@@@@@@@@:::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@+:::::::::::::::::::::::::@@@@@@@@@@@@:::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@::::::::::::::::::::::::::@@@@@@@@@@@@@::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@:::::::::::::::::::::::::::@@@@@@@@@@@@@%::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@:::::::::::::::::::::::::::=@@@@@@@@@@@@@@:::::::::::::::::::::::::::@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@::::::::::::::::::::::::::::@@@@@@@@@@@@@@@::::::::::::::::::::::::::::@@@@@@@@@@@@@@@
@@@@@@@@@@@@@:::::::::::::::::::::::::::::@@@@@@@@@@@@@@@@::::::::::::::::::::::::::::#@@@@@@@@@@@@@
@@@@@@@@@@@@:::::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@:::::::::::::::::::::::::::::+@@@@@@@@@@@@
@@@@@@@@@@@::::::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@::::::::::::::::::::::::::::::@@@@@@@@@@@
@@@@@@@@@@::::::::::::::::::::::::::::::%@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::::::::::@@@@@@@@@@
@@@@@@@@@:::::::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@=:::::::::::::::::::::::::::::::@@@@@@@@@
@@@@@@@%:::::::::::::::::::::::::::::::-@@@@@@@@@@@@@@@@@@@@::::::::::::::::::::::::::::::::@@@@@@@@
@@@@@@+::::::::::::::::::::::::::::::::@@@@@@@@@@@@@@@@@@@@@:::::::::::::::::::::::::::::::::@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@..-@@..+@.....*@..@@@..@@....%@@@@%...*@@...@@..@@..*@@:. .@@@@..@@@@..@@@..++.....@@@@@@@@@
@@@@@@@@. ..@  +@  ***%@  @@@  @@ .+...@@ ..@:..#@..@*. *@. @:..*@...@@. @@@@. @=. @@+ .***@@@@@@@@@
@@@@@@@@. .... +@  ...@@  @@@  @@ .%=..@. .@@@@ .@..%....@..@. @@@@. .@. @@@@. . :@@@+ .. :@@@@@@@@@
@@@@@@@@. %-   +@  @@@@@ .@@@  @@ .. .@@...@@@...@#...+... @@..#@@@. %@. @@@@. @. +@@+ .@@@@@@@@@@@@
@@@@@@@@. %@=..+@     *@+.  ...@@..@@..%@..   ..@@@...@@. .@@@.   ..=@@..  .@..@@...@+.   .@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@"
horizontal_alignment = 3
vertical_alignment = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
